Add wow animation to accommodation images

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ THIS IS A HAND CODED PROJECT FOR PORTFOLIO DESIGNED AND CREATED BY Frank Li
                         <h4>Graceland Yard</h4>
                         <p class="addressAccom">Address: Jia 9 Zhengjue Hutong, Xicheng District, Beijing</p>
                         <p>
-                            <img src="images/accommadation/gracelandyard.jpg" alt="Graceland Yard" />
+                            <img data-wow-delay="0.5s" class="wow bounceInLeft" src="images/accommadation/gracelandyard.jpg" alt="Graceland Yard" />
                             <span class="textBold">BusinessTime</span><br/><span>Check-in: from 14:00; Check-out: before 12:00<br/></span>
                             <span class="textBold">Facilities</span><br/><span>Wi-Fi: Yes<br/>Parking: Yes<br/></span>
                             <span class="textBold">Telephone</span><br/><span>+86 10 83288366</span>
@@ -274,7 +274,7 @@ THIS IS A HAND CODED PROJECT FOR PORTFOLIO DESIGNED AND CREATED BY Frank Li
                         <h4>Citycourt Hotel</h4>
                         <p class="addressAccom">Address: No.14 Liulisi Hutong, Dongcheng District, Beijing</p>
                         <p>
-                            <img src="images/accommadation/citycourthotel.jpg" alt="Citycourt Hotel" />
+                            <img data-wow-delay="0.5s" class="wow bounceInRight" src="images/accommadation/citycourthotel.jpg" alt="Citycourt Hotel" />
                             <span class="textBold">BusinessTime</span><br/><span>Check-in: 12:00 - 00:00; Check-out: 12:00 - 13:00<br/></span>
                             <span class="textBold">Facilities</span><br/><span>Wi-Fi: Yes<br/>Parking: Yes<br/></span>
                             <span class="textBold">Telephone</span><br/><span>+86 10 64026396</span>
@@ -284,7 +284,7 @@ THIS IS A HAND CODED PROJECT FOR PORTFOLIO DESIGNED AND CREATED BY Frank Li
                         <h4>Hutong Inn Beijing</h4>
                         <p class="addressAccom">Address: No.17 Zhangwang Hutong, Jiu Gulou Street, Dongcheng District, Beijing</p>
                         <p>
-                            <img src="images/accommadation/hutonginnbeijing.jpg" alt="Hutong Inn Beijing" />
+                            <img data-wow-delay="0.5s" class="wow bounceInLeft" src="images/accommadation/hutonginnbeijing.jpg" alt="Hutong Inn Beijing" />
                             <span class="textBold">BusinessTime</span><br/><span>24 hours<br/></span>
                             <span class="textBold">Facilities</span><br/><span>Wi-Fi: Yes<br/>Parking: Yes<br/></span>
                             <span class="textBold">Telephone</span><br/><span>+86 10 64031173</span>
@@ -294,7 +294,7 @@ THIS IS A HAND CODED PROJECT FOR PORTFOLIO DESIGNED AND CREATED BY Frank Li
                         <h4>Xuyard Hotel</h4>
                         <p class="addressAccom">Address: No.59 Xinjiekou East Street, Xicheng District, Beijing</p>
                         <p>
-                            <img src="images/accommadation/xuyardhotel.jpg" alt="Xuyard Hotel" />
+                            <img data-wow-delay="0.5s" class="wow bounceInRight" src="images/accommadation/xuyardhotel.jpg" alt="Xuyard Hotel" />
                             <span class="textBold">BusinessTime</span><br/><span>Check-in: from 14:00; Check-out: before 12:00<br/></span>
                             <span class="textBold">Facilities</span><br/><span>Wi-Fi: Yes<br/>Parking: No<br/></span>
                             <span class="textBold">Telephone</span><br/><span>+86 10 66162026</span>
@@ -304,7 +304,7 @@ THIS IS A HAND CODED PROJECT FOR PORTFOLIO DESIGNED AND CREATED BY Frank Li
                         <h4>Hilton Beijing Wangfujing</h4>
                         <p class="addressAccom">Address: No.8 East Wangfujing Street, Dongcheng District, Beijing</p>
                         <p>
-                            <img src="images/accommadation/hiltonbeijingwangfujing.jpg" alt="Hilton Beijing Wangfujing" />
+                            <img data-wow-delay="0.5s" class="wow bounceInLeft" src="images/accommadation/hiltonbeijingwangfujing.jpg" alt="Hilton Beijing Wangfujing" />
                             <span class="textBold">BusinessTime</span><br/><span>Check-in: from 15:00; Check-out: before 12:00<br/></span>
                             <span class="textBold">Facilities</span><br/><span>Wi-Fi: Yes<br/>Parking: Yes<br/></span>
                             <span class="textBold">Telephone</span><br/><span>+86 10 58128888</span>
@@ -314,7 +314,7 @@ THIS IS A HAND CODED PROJECT FOR PORTFOLIO DESIGNED AND CREATED BY Frank Li
                         <h4>Capital Hotel</h4>
                         <p class="addressAccom">Address: No.3 East Qian Men Street, Dongcheng District, Beijing</p>
                         <p>
-                            <img src="images/accommadation/capitalhotel.jpg" alt="Capital Hotel" />
+                            <img data-wow-delay="0.5s" class="wow bounceInRight" src="images/accommadation/capitalhotel.jpg" alt="Capital Hotel" />
                             <span class="textBold">BusinessTime</span><br/><span>Check-in: from 14:00; Check-out: before 12:00<br/></span>
                             <span class="textBold">Facilities</span><br/><span>Wi-Fi: Yes<br/>Parking: Yes<br/></span>
                             <span class="textBold">Telephone</span><br/><span>+86 10 51666064</span>
@@ -324,7 +324,7 @@ THIS IS A HAND CODED PROJECT FOR PORTFOLIO DESIGNED AND CREATED BY Frank Li
                         <h4>Ibis Hotel (Sanyuan Bridge)</h4>
                         <p class="addressAccom">Address: Building 17, A5 Shuguangxili Community, Chaoyang District, Beijing</p>
                         <p>
-                            <img src="images/accommadation/ibishotelsanyuanbridge.jpg" alt="Ibis Hotel (Sanyuan Bridge)" />
+                            <img data-wow-delay="0.5s" class="wow bounceInLeft" src="images/accommadation/ibishotelsanyuanbridge.jpg" alt="Ibis Hotel (Sanyuan Bridge)" />
                             <span class="textBold">BusinessTime</span><br/><span>Check-in: from 14:00; Check-out: before 12:00<br/></span>
                             <span class="textBold">Facilities</span><br/><span>Wi-Fi: Yes<br/>Parking: Yes<br/></span>
                             <span class="textBold">Telephone</span><br/><span>+86 10 58296999</span>
@@ -334,7 +334,7 @@ THIS IS A HAND CODED PROJECT FOR PORTFOLIO DESIGNED AND CREATED BY Frank Li
                         <h4>Pinganfu Hotel</h4>
                         <p class="addressAccom">Address: No.100 Dongsishitiao, Dongcheng District, Beijing</p>
                         <p>
-                            <img src="images/accommadation/pinganfuhotel.jpg" alt="Pinganfu Hotel" />
+                            <img data-wow-delay="0.5s" class="wow bounceInRight" src="images/accommadation/pinganfuhotel.jpg" alt="Pinganfu Hotel" />
                             <span class="textBold">BusinessTime</span><br/><span>Check-in: from 12:00; Check-out: before 12:00<br/></span>
                             <span class="textBold">Facilities</span><br/><span>Wi-Fi: Yes<br/>Parking: Yes<br/></span>
                             <span class="textBold">Telephone</span><br/><span>+86 10 51666064</span>
